[gd_scene load_steps=14 format=3 uid="uid://bjkg052ui3mnl"]

[ext_resource type="Script" uid="uid://bqen71fvkle87" path="res://scenes/gameplay/hud/advanced_hud.gd" id="1_6idyv"]
[ext_resource type="FontFile" uid="uid://casd318dkyewy" path="res://assets/ui/fonts/lilitaonerus.ttf" id="2_3as4q"]
[ext_resource type="FontFile" uid="uid://bd4a21b8dcnsd" path="res://assets/ui/fonts/funkin.ttf" id="2_e5qyr"]
[ext_resource type="PackedScene" uid="uid://bub15e063cnho" path="res://scenes/gameplay/hud/popup/number_counter.tscn" id="3_3as4q"]
[ext_resource type="StyleBox" uid="uid://dhwynnq1ji6ou" path="res://scenes/gameplay/hud/styleboxes/fortnite_bar_bg.tres" id="3_e5qyr"]
[ext_resource type="StyleBox" uid="uid://bdag5e631yhvt" path="res://scenes/gameplay/hud/styleboxes/health_bar_right.tres" id="4_mp5kv"]
[ext_resource type="AudioStream" uid="uid://cs4y7h8cnhhwm" path="res://assets/sounds/countdown/funkin/3.ogg" id="5_8xe2f"]

[sub_resource type="LabelSettings" id="LabelSettings_it28e"]
font = ExtResource("2_e5qyr")
font_size = 48
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yhk22"]
bg_color = Color(0.8, 0.8, 0.8, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_8v6dl"]
font = ExtResource("2_3as4q")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_3l1f0"]
font = ExtResource("2_3as4q")
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvh1u"]
bg_color = Color(0, 0.625916, 0.994639, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kxj68"]

[node name="advanced_hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999695, 1.00043)
script = ExtResource("1_6idyv")

[node name="text_ui" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="score" type="Label" parent="text_ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1065.16
offset_top = 590.0
offset_right = 1178.16
offset_bottom = 646.0
grow_horizontal = 2
grow_vertical = 2
text = "Score"
label_settings = SubResource("LabelSettings_it28e")
horizontal_alignment = 1

[node name="counter" parent="text_ui" instance=ExtResource("3_3as4q")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = 1079.0
offset_top = 680.0
offset_right = 1179.0
offset_bottom = 710.0
grow_vertical = 1

[node name="judgement_popup" type="Label" parent="text_ui"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.481
anchor_top = 0.602
anchor_right = 0.519
anchor_bottom = 0.687
offset_left = 588.76
offset_top = 400.42
offset_right = 652.24
offset_bottom = 476.02
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(25, 30)
theme_override_styles/normal = SubResource("StyleBoxFlat_yhk22")
text = "Epic!
x0"
label_settings = SubResource("LabelSettings_8v6dl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="health_bar" type="ProgressBar" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -614.0
offset_top = -60.0
offset_right = -163.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = ExtResource("3_e5qyr")
theme_override_styles/fill = ExtResource("4_mp5kv")
value = 50.0
show_percentage = false

[node name="health_percent" type="Label" parent="health_bar"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.002
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 460.902
offset_top = -2.0
offset_right = 38.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "50%"
label_settings = SubResource("LabelSettings_3l1f0")

[node name="accuracy_bar" type="ProgressBar" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -614.0
offset_top = -75.0
offset_right = -163.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = ExtResource("3_e5qyr")
theme_override_styles/fill = SubResource("StyleBoxFlat_vvh1u")
value = 50.0
show_percentage = false

[node name="accuracy_progress" type="Label" parent="accuracy_bar"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.002
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 460.902
offset_top = -6.0
offset_right = 175.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
text = "0.00%"
label_settings = SubResource("LabelSettings_3l1f0")

[node name="countdown" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="sprite" type="Sprite2D" parent="countdown"]
visible = false
position = Vector2(640, 360)
scale = Vector2(0.7, 0.7)
texture = SubResource("PlaceholderTexture2D_kxj68")

[node name="sound" type="AudioStreamPlayer" parent="countdown"]
stream = ExtResource("5_8xe2f")
max_polyphony = 5

[node name="timer" type="Timer" parent="countdown"]
one_shot = true
